Create and Add the HTML partials to Default layouts

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -1,6 +1,9 @@
 @import "bootstrap-sprockets"
 @import "bootstrap"
 
+body
+  height: 100vh
+
 .center
   margin-top: 80px
   text-align: center
@@ -18,3 +21,34 @@
 
   &:hover
     text-decoration: none
+
+footer
+  position: absolute
+  width: 1140px
+  bottom: 0
+  margin-top: 45px
+  padding-top: 5px
+  border-top: 1px solid #eaeaea
+  color: #777
+
+
+footer a
+  color: #555
+
+
+footer a:hover
+  color: #222
+
+
+footer small
+  float: left
+
+
+footer ul
+  float: right
+  list-style: none
+
+
+footer ul li
+  float: left
+  margin-left: 15px
