--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,28 +5,13 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  <!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
-      </script>
-  <![endif]-->
+  <%= render "layouts/shim" %>
 </head>
 <body>
-<div class="navbar navbar-fixed-top navbar-inverse">
+  <%= render "layouts/header" %>
   <div class="container">
-    <%= link_to "Sample App", root_path, id: "logo" %>
-    <nav>
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Help", static_pages_help_path %></li>
-        <li><%= link_to "About", static_pages_about_path %></li>
-      </ul>
-    </nav>
+    <%= yield %>
   </div>
-</div>
-<div class="container">
-  <%= yield %>
-</div>
-
-
+  <%= render "layouts/footer" %>
 </body>
 </html>
