Added the contact page

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -4,6 +4,13 @@
 body
   height: 100vh
 
+h2
+  margin: 0
+  padding: 0
+
+.content
+  margin-top: 60px
+
 .center
   margin-top: 80px
   text-align: center
