--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -59,3 +59,10 @@ footer ul
 footer ul li
   float: left
   margin-left: 15px
+
+.debug_dump
+  clear: both
+  float: 100%
+  margin-top: 45px
+  position: relative
+  bottom: 0
