--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,46 @@
 <% provide(:title, "Sign up") %>
 <div class="content">
-  <h2>Sign up page</h2>
-  <p>This page will be for sign up the new users</p>
+  <h2>Sing up</h2>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+
+      <% if @user.errors.any? %>
+        <h4>
+          <div class="alert alert-danger">
+            <%= pluralize(@user.errors.count, "error") %>
+            porhibited this user form beign saved:
+          </div>
+        </h4>
+        <div class="alert alert-warning">
+          <ul>
+            <% @user.errors.full_messages.each do |msg| %>
+              <li>
+                <%= msg %>
+              </li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+
+      <%= form_for @user do |f| %>
+        <div class="form-group">
+          <%= f.label :name %>
+          <%= f.text_field :name, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :email %>
+          <%= f.email_field :email, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :password %>
+          <%= f.password_field :password, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, class: "form-control" %>
+        </div>
+        <%= f.submit "Sing up", class: "btn btn-primary col-md-12" %>
+      <% end %>
+    </div>
+  </div>
 </div>
